pxc/tests/test_025_slice/slimemfunc2.px
namespace slimemfunc2;
import common -;
import exception -;

{
  set_stack_trace_limit(0);
  mutable v = make_varray{int}(1, 22, 999, 14);
  const sli = v.range();
  sli[2] = 998;
  println(sli);
  v.push_back(55); // error: would invalidate
}
